fix overflow main

--- a/src/styles/mediaplayer.scss
+++ b/src/styles/mediaplayer.scss
@@ -1,16 +1,8 @@
-
-$gray-700: #374151;
-
 input[type="range"]{
     -webkit-appearance: none;
     -moz-appearance: none;
     outline: none;
 }
-
-// input[type="range"]::-webkit-slider-runnable-track{
-//     -webkit-appearance: none;
-
-// }
 
 input[type="range"]::-webkit-slider-thumb{
     -webkit-appearance: none;
